--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,10 @@ Package: cocons
 Type: Package
 Title: Covariate-Based Covariance Functions for Nonstationary Spatial Modeling
 Version: 0.1.4
-Author: Federico Blasi [aut, cre] (<https://orcid.org/0000-0001-9337-7154>), Reinhard Furrer [ctb] (<https://orcid.org/0000-0002-6319-2332>)
-Authors@R: c(person("Federico", "Blasi", email = "federico.blasi@math.uzh.ch",
-  role = c("aut", "cre"), comment = c(ORCID = "0000-0001-9337-7154")),
-  person("Reinhard", "Furrer",
-  role = c("ctb"), comment = c(ORCID = "0000-0002-6319-2332"))
-  )
-Maintainer: Federico Blasi <federico.blasi@math.uzh.ch>
+Author: Federico Blasi [aut, cre] (<https://orcid.org/0000-0001-9337-7154>)
+Authors@R: person("Federico", "Blasi", email = "federico.blasi@uzh.ch",
+  role = c("aut", "cre"), comment = c(ORCID = "0000-0001-9337-7154"))
+Maintainer: Federico Blasi <federico.blasi@uzh.ch>
 Description: Estimation, prediction, and simulation of nonstationary Gaussian process with modular covariate-based covariance functions. 
   Sources of nonstationarity, such as spatial mean, variance, geometric anisotropy, smoothness, and nugget, can be considered based on spatial characteristics. 
   An induced compact-supported nonstationary covariance function is provided, enabling fast and memory-efficient computations when handling densely sampled domains.
