--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -30,16 +30,41 @@ jobs:
         uses: r-lib/actions/setup-r@f57f1301a053485946083d7a45022b278929a78a
         with:
           r-version: ${{ matrix.r-version }}
+
+      - name: Show R version
+        run: Rscript -e "cat(R.version.string, '\\n')"
+        shell: Rscript {0}
+
       - name: Install dependencies
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          dependencies: '"all"'
+          extra-packages: any::covr, any::xml2
+          needs: coverage
+
+      - name: Test coverage
         run: |
-          install.packages(c("remotes", "rcmdcheck"))
-          remotes::install_deps(dependencies = TRUE)
+          cov <- covr::package_coverage(
+            type = "all",
+            quiet = FALSE,
+            clean = FALSE,
+            install_path = file.path(normalizePath(Sys.getenv("RUNNER_TEMP"), winslash = "/"), "package")
+          )
+          covr::to_cobertura(cov)
         shell: Rscript {0}
-      - name: Check
-        run: rcmdcheck::rcmdcheck(args = "--no-manual", error_on = "error")
-        shell: Rscript {0}
+
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./cobertura.xml
+          token: ${{ secrets.CODECOV }}
           slug: blasif/cocons
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV }}
+
+      - name: Show testthat output
+        if: always()
+        run: |
+          ## --------------------------------------------------------------------
+          find '${{ runner.temp }}/package' -name 'testthat.Rout*' -exec cat '{}' \; || true
+        shell: bash
