--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -40,7 +40,8 @@ jobs:
           needs: coverage
 
       - name: Show R version
-        run: Rscript -e 'cat(R.version.string, "\n")'
+        run: |
+          cat(R.version.string, "\n")
         shell: Rscript {0}
 
       - name: Test coverage
