files instead of file in codecov with

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
-          file: ./cobertura.xml
+          files: ./cobertura.xml
           token: ${{ secrets.CODECOV }}
           slug: blasif/cocons
         env:
